[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = { version = "0.3.76", features = ["std"] }
thiserror = "2.0.11"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["Document", "DocumentFragment", "Element", "Text", "Window", "HtmlElement", "CssStyleDeclaration", "HtmlCollection"] }
